# edge-proxy

./: .bazelrc  .gitignore  BUILD.bazel  Makefile  Makefile.conf  README.md  WORKSPACE  go.mod  go.sum
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yaml
api/v2/: BUILD.bazel  api.go
api/v3/: BUILD.bazel  api.go
bazel/: BUILD.bazel  dependencies.bzl
bazel/private/: repositories.bzl
bazel/toolchains/: py_toolchain.bzl
cmd/auth_server_v2/: BUILD.bazel  main.go
cmd/auth_server_v3/: BUILD.bazel  main.go
keys/: BUILD.bazel  client.pub  private.json
pkg/domains/clientcompany/auth/v2/: BUILD.bazel  auth.go
pkg/domains/clientcompany/auth/v3/: BUILD.bazel  auth.go
pkg/domains/clientcompany/claims/: BUILD.bazel  clientcompany_claims.go
pkg/domains/mycompany/claims/: BUILD.bazel  mycompany_claims.go
pkg/utils/jwt/: BUILD.bazel  jwt_utils.go
tools/docker/: config.json.sample
tools/scripts/: delve-edit-vscode.sh  pre-commit  prepare-directories.sh
