load("//bazel:dependencies.bzl", "py_runtimes", "py_toolchain")
load("@bazel_gazelle//:def.bzl", "gazelle")

py_toolchain()

py_runtimes()

### Macros
# gazelle:prefix github.com/celsosantos/edge-proxy
# gazelle:repository_macro ./bazel/private/repositories.bzl%proxy_dependencies
# gazelle:proto disable_global

gazelle(name = "gazelle")
