filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]) + [
        "//bazel/private:all_files",
        "//bazel/toolchains:all_files",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_rules",
    srcs = glob(["*.bzl"]) + [
      "//bazel/private:all_rules",
      "//bazel/toolchains:all_rules",
    ],
    visibility = ["//visibility:public"],
)
