load("@io_bazel_rules_go//go:def.bzl", "go_library")

# -----------------------------------------------------------------------------

go_library(
    name = "go_default_library",
    srcs = [
        "api.go",
    ],
    importpath = "github.com/celsosantos/edge-proxy/api/v2",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_envoyproxy_go_control_plane//envoy/api/v2/core:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/service/auth/v2:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/type:go_default_library",
        "@org_golang_google_genproto//googleapis/rpc/code:go_default_library",
        "@org_golang_google_genproto//googleapis/rpc/status:go_default_library",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto", # maps to "@com_github_golang_protobuf//ptypes/wrappers:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)
