load("@io_bazel_rules_go//go:def.bzl", "go_library")

# -----------------------------------------------------------------------------

go_library(
    name = "go_default_library",
    srcs = [
        "clientcompany_claims.go",
    ],
    importpath = "github.com/celsosantos/edge-proxy/pkg/domains/clientcompany/claims",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/domains/mycompany/claims:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)
